more backend plugin cleanup.
